--- a/app/views/artifacts/_list.html.erb
+++ b/app/views/artifacts/_list.html.erb
@@ -25,5 +25,5 @@
   </tbody>
 </table>
 
-<%= link_to 'New Artifact', new_artifact_path(project_id: @project.id),
+<%= link_to 'New Artifact', new_artifact_path(space_id: @space.id),
             :class => 'btn btn-primary' %>
