--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -8,8 +8,8 @@
   <dd><%= @artifact.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:key) %>:</strong></dt>
   <dd><%= @artifact.key %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
-  <dd><%= @artifact.project_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:space_id) %>:</strong></dt>
+  <dd><%= @artifact.space_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
