--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -1,13 +1,13 @@
-<%= form_for [@tenant, @project], :html => { :class => "form-horizontal project" } do |f| %>
+<%= form_for [@tenant, @space], :html => { :class => "form-horizontal space" } do |f| %>
 
-    <% if @project.errors.any? %>
+    <% if @space.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
       <div class="panel-heading">
-        <h3 class="panel-title"><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h3>
+        <h3 class="panel-title"><%= pluralize(@space.errors.count, "error") %> prohibited this space from being saved:</h3>
       </div>
       <div class="panel-body">
         <ul>
-        <% @project.errors.full_messages.each do |msg| %>
+        <% @space.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
         </ul>
