--- a/app/views/spaces/_list.html.erb
+++ b/app/views/spaces/_list.html.erb
@@ -1,8 +1,8 @@
-<%- model_class = Project -%>
+<%- model_class = Space -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<% if @projects.size > 0 %>
+<% if @spaces.size > 0 %>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -13,19 +13,19 @@
       </tr>
     </thead>
     <tbody>
-      <% @projects.each do |project| %>
+      <% @spaces.each do |space| %>
         <tr>
-          <td><%= link_to project.title,
-                tenant_project_path(project, tenant_id: @tenant.id), class: 'main-link' %></td>
-          <td><%= project.details %></td>
-          <td><%= project.expected_completion_date %></td>
+          <td><%= link_to space.title,
+                tenant_space_path(space, tenant_id: @tenant.id), class: 'main-link' %></td>
+          <td><%= space.details %></td>
+          <td><%= space.expected_completion_date %></td>
           <td>
             <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                edit_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
-            <%= link_to 'Edit Users', users_tenant_project_path(project, tenant_id: @tenant.id),
+                edit_tenant_space_path(space, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
+            <%= link_to 'Edit Users', users_tenant_space_path(space, tenant_id: @tenant.id),
                         :class => 'btn btn-default btn-xs' %>
             <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                        tenant_project_path(project, tenant_id: @tenant.id),
+                        tenant_space_path(space, tenant_id: @tenant.id),
                         :method => :delete,
                         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", 
                             :default => 'Are you sure?')) },
@@ -36,10 +36,10 @@
     </tbody>
   </table>
 <% else %>
-  <p class="lead">You don't have any projects</p>
+  <p class="lead">You don't have any spaces</p>
 <% end %>
 
-<% if (@tenant.can_create_projects?) %>
-  <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id),
+<% if (@tenant.can_create_spaces?) %>
+  <%= link_to 'New Space', new_tenant_space_path(tenant_id: @tenant.id),
             :class => 'btn btn-primary' %>
 <% end %>
