--- a/app/views/artifacts/_form.html.erb
+++ b/app/views/artifacts/_form.html.erb
@@ -27,10 +27,10 @@
       <%= f.file_field :upload, :class => 'form-control' %>
     </div>
   </div>
-  <%= f.hidden_field :project_id %>
+  <%= f.hidden_field :space_id %>
   <%= f.submit nil, :class => 'btn btn-primary' %>
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            tenant_project_path(tenant_id: Tenant.current_tenant_id, 
-                                id: @artifact.project_id), :class => 'btn btn-default' %>
+            tenant_space_path(tenant_id: Tenant.current_tenant_id,
+                                id: @artifact.space_id), :class => 'btn btn-default' %>
 
 <% end %>
