--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,32 +1,32 @@
-<%- model_class = Project -%>
+<%- model_class = Space -%>
 <div class="page-header">
-  <h3><%= @project.title %></h3>
-  <h3><small>Organization - <%= tenant_name @project.tenant_id %></small></h3>
+  <h3><%= @space.title %></h3>
+  <h3><small>Organization - <%= tenant_name @space.tenant_id %></small></h3>
 </div>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd><%= @project.title %></dd>
+  <dd><%= @space.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:details) %>:</strong></dt>
-  <dd><%= @project.details %></dd>
+  <dd><%= @space.details %></dd>
   <dt><strong><%= model_class.human_attribute_name(:expected_completion_date) %>:</strong></dt>
-  <dd><%= @project.expected_completion_date %></dd>
+  <dd><%= @space.expected_completion_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:tenant_id) %>:</strong></dt>
-  <dd><%= @project.tenant_id %></dd>
+  <dd><%= @space.tenant_id %></dd>
 </dl>
 <h3>Artifacts</h3>
-<%= render 'artifacts/list', artifacts: @project.artifacts %>
+<%= render 'artifacts/list', artifacts: @space.artifacts %>
 <br />
 <br />
 
 <%= link_to '< Back to Organization Home', root_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_tenant_project_path(project: @project, tenant: @project.tenant_id), 
+              edit_tenant_space_path(space: @space, tenant: @space.tenant_id), 
               :class => 'btn btn-default' %>
-<%= link_to 'Edit Project Users', users_tenant_project_path(tenant_id: @project.tenant_id, id: @project.id),
+<%= link_to 'Edit Space Users', users_tenant_space_path(tenant_id: @space.tenant_id, id: @space.id),
               :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              tenant_project_path(@project, @project.tenant_id),
+              tenant_space_path(@space, @space.tenant_id),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", 
               :default => 'Are you sure?')) },
