--- a/app/views/spaces/users.html.erb
+++ b/app/views/spaces/users.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3>Users for Project <%= @project.title %></h3>
+  <h3>Users for Space <%= @space.title %></h3>
   <strong>(Other than yourself)</strong>
 </div>
 <table class="table table-striped">
@@ -10,13 +10,13 @@
     </tr>
   </thead>
   <tbody>
-    <% @project_users.each do |project_user| %>
+    <% @space_users.each do |space_user| %>
       <tr>
-        <td><%= project_user.email %></td>
+        <td><%= space_user.email %></td>
         <td>
-          <% if !project_user.is_admin? %>
-            <%= link_to "Remove", user_project_path(project_user.user_projects.find_by(project_id: @project.id),
-                                  tenant_id: @project.tenant_id),
+          <% if !space_user.is_admin? %>
+            <%= link_to "Remove", user_space_path(space_user.user_spaces.find_by(space_id: @space.id),
+                                  tenant_id: @space.tenant_id),
                                   :method => :delete,
                                   :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                                   :class => 'btn btn-xs btn-danger' %>
@@ -27,7 +27,7 @@
   </tbody>
 </table>
 
-<h3>Users to add to Project <%= @project.title %></h3>
+<h3>Users to add to Space <%= @space.title %></h3>
 <strong>(Admins don't need to be added)</strong>
 <table class="table table-striped">
   <thead>
@@ -42,7 +42,7 @@
         <td><%= other_user.email %></td>
         <td>
           <%= link_to 'Add',
-                      add_user_tenant_project_path(id: @project.id, tenant_id: @project.tenant_id, user_id: other_user.id),
+                      add_user_tenant_space_path(id: @space.id, tenant_id: @space.tenant_id, user_id: other_user.id),
                       :method => :put,
                       :class => 'btn btn-xs btn-success' %>
         </td>
@@ -51,6 +51,6 @@
   </tbody>
 </table>
 
-<%= link_to 'Back', tenant_project_path(id: @project.id, tenant_id: @project.tenant_id),
+<%= link_to 'Back', tenant_space_path(id: @space.id, tenant_id: @space.tenant_id),
                       :class => 'btn btn-primary' %>
           
