--- a/app/views/user_spaces/show.html.erb
+++ b/app/views/user_spaces/show.html.erb
@@ -1,21 +1,21 @@
-<%- model_class = UserProject -%>
+<%- model_class = UserSpace -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:project_id) %>:</strong></dt>
-  <dd><%= @user_project.project_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:space_id) %>:</strong></dt>
+  <dd><%= @user_space.space_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @user_project.user_id %></dd>
+  <dd><%= @user_space.user_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              user_projects_path, :class => 'btn btn-default'  %>
+              user_spaces_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_user_project_path(@user_project), :class => 'btn btn-default' %>
+              edit_user_space_path(@user_space), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              user_project_path(@user_project),
+              user_space_path(@user_space),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
